cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_305.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:230: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:230:13: Write of unused value
228.           }
229.           if (l != -8) {
230.               c2ln(in, tin0, tin1, l + 8);
                   ^
231.               tin0 ^= tout0;
232.               tin1 ^= tout1;
